--- a/Style.css
+++ b/Style.css
@@ -15,6 +15,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: var(--text-color-light);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
@@ -46,7 +47,7 @@ body {
 }
 
 #particles-js,
-.sobre,
+.qualidades,
 .topo-do-site,
 footer,
 header {
@@ -71,7 +72,7 @@ header .logo:hover {
 
 .container,
 .projetos .container,
-section.sobre p {
+section.qualidades p {
     max-width: 1200px;
 }
 
@@ -242,7 +243,7 @@ p span {
 .projetos,
 .redes-sociais a,
 .redes-sociais span,
-section.sobre h2 {
+section.qualidades h2 {
     color: var(--text-color);
 }
 
@@ -327,9 +328,30 @@ section.sobre h2 {
     background-color: #ffb300;
 }
 
+.tooltip-topo {
+    position: absolute;
+    color: yellow !important;
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 16px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.3s, transform 0.3s;
+    pointer-events: none;
+    z-index: 10;
+    white-space: nowrap;
+    transform: scale(0.9);
+}
+
+.tooltip-topo.show {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+}
+
 .projetos h2 {
     font-size: 2.5rem;
-    margin-bottom: 24px;
+    margin-bottom: 64px;
 }
 
 .projeto {
@@ -347,6 +369,7 @@ section.sobre h2 {
 }
 
 .projeto h3 {
+    color: var(--text-color);
     font-size: 1.8rem;
     margin-bottom: 24px;
 }
@@ -368,33 +391,34 @@ section.sobre h2 {
     margin-right: 8px;
 }
 
-section.sobre {
+section.qualidades {
     text-align: center;
     position: relative;
 }
 
-section.sobre h2 {
+section.qualidades h2 {
     font-size: 2rem;
-    margin-bottom: 24px;
+    margin-bottom: 64px;
 }
 
 footer p,
-section.sobre p {
+section.qualidades p {
     color: var(--text-color-light);
 }
 
-section.sobre p {
+section.qualidades p {
     font-size: 1.125rem;
     margin: 0 auto 24px;
 }
 
 .form-container h2,
-section.sobre h3 {
+section.qualidades h3 {
     margin-bottom: 24px;
 }
 
-.sobre h3 {
+.qualidades h3 {
     font-size: 24px;
+    margin-top: 64px;
     color: var(--text-color);
 }
 
@@ -507,6 +531,9 @@ section.sobre h3 {
     animation-delay: calc(30s / 8 * (8 - 8) * -1);
 }
 
+.contato h2{
+    margin-bottom: 64px;
+}
 .form-container {
     max-width: 600px;
 }
@@ -527,6 +554,7 @@ section.sobre h3 {
 
 .form-container button {
     padding: 10px 20px;
+    margin-bottom: 24px;
     border: none;
     border-radius: 5px;
     color: var(--text-color);
