--- a/Style.css
+++ b/Style.css
@@ -34,18 +34,18 @@ header {
 
 :root {
     --primary-color: #007bff;
-    --secondary-color: #000;
+    --secondary-color: #010101;
     --text-color: #f8f9fa;
     --text-color-light: #ccc;
-    --background-color: #000;
+    --background-color: #080808;
     --hover-background: #0056b3;
     --transition-duration: .3s;
     --icon-hover-scale: 1.3;
-    --icon-transition: .5s
+    --icon-transition: .5s;
 }
 
 body {
-    background-color: var(--secondary-color);
+    background-color: var(--background-color);
     line-height: 1.6;
     scroll-behavior: smooth;
     overflow-x: hidden
@@ -73,7 +73,7 @@ body {
 .qualidades,
 .topo-do-site,
 header {
-    background-color: var(--background-color)
+    background-color: var(--secondary-color)
 }
 
 .btn,
@@ -661,7 +661,7 @@ footer {
     align-items: center;
     justify-content: center;
     padding: 40px 20px;
-    background-color: var(--background-color)
+    background-color: var(--secondary-color)
 }
 
 .footer-icons {
