--- a/Style.css
+++ b/Style.css
@@ -34,14 +34,13 @@ header {
 
 :root {
     --primary-color: #007bff;
-    --secondary-color: #010101;
     --text-color: #f8f9fa;
     --text-color-light: #ccc;
-    --background-color: #080808;
+    --background-color: #000000;
     --hover-background: #0056b3;
     --transition-duration: .3s;
     --icon-hover-scale: 1.3;
-    --icon-transition: .5s;
+    --icon-transition: .5s
 }
 
 body {
@@ -73,7 +72,7 @@ body {
 .qualidades,
 .topo-do-site,
 header {
-    background-color: var(--secondary-color)
+    background-color: var(--background-color)
 }
 
 .btn,
@@ -661,7 +660,7 @@ footer {
     align-items: center;
     justify-content: center;
     padding: 40px 20px;
-    background-color: var(--secondary-color)
+    background-color: var(--background-color)
 }
 
 .footer-icons {
